# paris-hackathon-2026-training

./: .gitignore  README.md  multinode_trainer.slurm  pyproject.toml  pytorch.setup.sh  run_sweep.sh  run_train.sh  submit.sh
src/paris_hackathon_2026_training/: __init__.py
tests/unit_tests/: test_qwen3_init.py  test_qwen3_optimizer.py
torchtitan/: model.py  trainer.py
torchtitan/components/: checkpoint.py  optimizer.py
torchtitan/distributed/: utils.py
torchtitan/hf_datasets/: text_datasets.py
torchtitan/models/common/: attention.py  feed_forward.py
torchtitan/models/qwen3/: __init__.py  config_registry.py  model.py  state_dict_adapter.py
torchtitan/models/qwen3/optimizer/: __init__.py  adamw.py  interfaces.py  multi_group_optimizer.py  muon.py
