[project]
name = "paris-hackathon-2026-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samuel Weinbach", email = "samuel.weinbach@aleph-alpha-research.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
]

[project.scripts]
paris-hackathon-2026-training = "paris_hackathon_2026_training:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
